--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,5 +54,6 @@ dependencies {
     testImplementation "androidx.paging:paging-common-ktx:$paging_version"
 
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'androidx.core:core-ktx:1.7.0'
 
 }
