We created two Broadcast Receivers. One to post notifications and one to intercept the notifications as well as an Ordered broadcast receiver to add more functionality and change the intents.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,10 +27,14 @@
             </intent-filter>
         </activity>
 
-        <receiver
-            android:name=".NotificationReceiver"
-            android:permission="com.bignerdranch.android.photogallery.PRIVATE"
-            android:exported="false">
+        <receiver android:name=".NotificationReceiver"
+                  android:permission="com.bignerdranch.android.photogallery.PRIVATE"
+                  android:exported="false">
+
+            <intent-filter>
+                <action
+                    android:name="com.bignerdranch.android.photogallery.SHOW_NOTIFICATION" />
+            </intent-filter>
         </receiver>
     </application>
 
