We obtained the page URL of our photos from the JSON data and passed it along to be started with an intent, an intent that will kick off the users browser displaing the page URL for the photo when it is clicked.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,11 +27,14 @@
             </intent-filter>
         </activity>
 
+
+        <!-- This is a standalone receiver. -->
+
         <receiver android:name=".NotificationReceiver"
                   android:permission="com.bignerdranch.android.photogallery.PRIVATE"
                   android:exported="false">
 
-            <intent-filter>
+            <intent-filter android:priority="-999">
                 <action
                     android:name="com.bignerdranch.android.photogallery.SHOW_NOTIFICATION" />
             </intent-filter>
