--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.bignerdranch.android.photogallery">
 
-    <permission android:name="com.bignerdranch.android.photogallery.PRIVATE"
+    <permission
+        android:name="com.bignerdranch.android.photogallery.PRIVATE"
         android:protectionLevel="signature" />
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -11,12 +12,12 @@
     <application
         android:name=".PhotoGalleryApplication"
         android:allowBackup="true"
+        android:exported="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.PhotoGallery"
-        android:exported="true">
+        android:theme="@style/Theme.PhotoGallery">
         <activity
             android:name=".PhotoGalleryActivity"
             android:exported="true">
@@ -26,17 +27,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity android:name=".PhotoPageActivity" />
 
         <!-- This is a standalone receiver. -->
-
-        <receiver android:name=".NotificationReceiver"
-                  android:permission="com.bignerdranch.android.photogallery.PRIVATE"
-                  android:exported="false">
-
+        <receiver
+            android:name=".NotificationReceiver"
+            android:exported="false"
+            android:permission="com.bignerdranch.android.photogallery.PRIVATE">
             <intent-filter android:priority="-999">
-                <action
-                    android:name="com.bignerdranch.android.photogallery.SHOW_NOTIFICATION" />
+                <action android:name="com.bignerdranch.android.photogallery.SHOW_NOTIFICATION" />
             </intent-filter>
         </receiver>
     </application>
