--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,9 @@
         android:name=".PhotoGalleryApplication"
         android:allowBackup="true"
         android:exported="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_custom_camera"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher_custom_camera_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PhotoGallery">
         <activity
