--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ android {
 }
 
 dependencies {
-    def paging_version = "3.1.0"
+    def paging_version = "3.1.1"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -43,17 +43,27 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    // android recyclerView
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+
+    // android retrofit and Gson
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.5.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+
+    // android lifecycle extension callbacks and functions
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+
+    // android pagination
     implementation "androidx.paging:paging-runtime-ktx:$paging_version"
-    // alternatively - without Android dependencies for tests
     testImplementation "androidx.paging:paging-common-ktx:$paging_version"
 
+    // android picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    // androidx jetpack extensions and work manager
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation "android.arch.work:work-runtime:1.0.1"
 
