--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <uses-permission android:name="com.bignerdranch.android.photogallery.PRIVATE" />
 
     <application
-        android:name=".PhotoGalleryApplication"
+        android:name=".ui.PhotoGalleryApplication"
         android:allowBackup="true"
         android:exported="true"
         android:icon="@mipmap/ic_launcher_custom_camera"
@@ -33,7 +33,7 @@
 
         <!-- This is a standalone receiver. -->
         <receiver
-            android:name=".NotificationReceiver"
+            android:name=".ui.notifications.NotificationReceiver"
             android:exported="false"
             android:permission="com.bignerdranch.android.photogallery.PRIVATE">
             <intent-filter android:priority="-999">
